progress on acct forms

--- a/app/assets/stylesheets/components/_article.sass
+++ b/app/assets/stylesheets/components/_article.sass
@@ -33,14 +33,16 @@
     font-family: $sans
     font-size: 27px
     line-height: 1
-    font-weight: 600
+    font-weight: 800
     letter-spacing: -0.0325em
 
   ul, ol
     padding-left: 4rem
     padding-right: 10%
 
-  ul
+  video, figure, iframe
+    width: 100%
+    height: auto
 
   // this should mirror the above
   &.-constrained
