--- a/app/assets/stylesheets/shared/_text.sass
+++ b/app/assets/stylesheets/shared/_text.sass
@@ -125,6 +125,11 @@
     font-size: var(--t3)
     line-height: 1.2
     font-weight: 400
+  &.-h4
+    font-family: $sans
+    font-size: var(--t3)
+    line-height: 1.2
+    font-weight: 800
 
   // alignment
   &.-centered
