--- a/app/views/home/_sidebar.html.haml
+++ b/app/views/home/_sidebar.html.haml
@@ -7,7 +7,7 @@
         :markdown
           Dublin Inquirer is funded by its readers, not advertisers.
 
-      .block.-mt2= link_to "Subscribe", :products, class: 'button -standard'
+      .block.-mt2= link_to "Subscribe", :products, class: 'button -white'
   - else
     .block.-bg-faint.-b.-py2.-px1.-mb2
       .p.-t5
