--- a/app/views/subscriptions/thanks.html.haml
+++ b/app/views/subscriptions/thanks.html.haml
@@ -1,26 +1,18 @@
 - title 'Subscribe'
 - noindex true
 
-- content_for :breadcrumbs do
-  .current Subscribe
+.wrapper.-small{role: 'layout'}
+  .block.-my4.-py4
+    %header.block.-mt4.-mb2
+      %h2.h.-h4.-centered Thanks
 
-%header.header.-modal
-  %h1.heading Thanks
+    .p.-t3.-centered.-sf
+      :markdown
+        In-depth local reporting is more important than ever, and it's subscribers like you who make it possible.
 
-.text.-article
-  - if @subscription.patron?
-    :markdown
-      In-depth local reporting is more important than ever, and it's subscribers like you who make it possible.
+        If you have any problems, story suggestions, or just want to talk: email us at <a href="mailto:info@dublininquirer.com">info@dublininquirer.com</a>. We like talking to our readers!
 
-  - else
-    :markdown
-      It's subscribers like you who make Dublin Inquirer's work possible. Thank you.
-
-  :markdown
-    If you have any problems, story suggestions, or just want to talk: email us at <a href="mailto:info@dublininquirer.com">info@dublininquirer.com</a>. We like talking to our readers!
-
-%nav.box.-invisible.-tight.-other
-  = link_to "Go to the home page", :root, class: 'button -big'
+      = link_to raw("Go to the home page &rarr;"), :root, class: 'button -big'
 
 :javascript
   fbq('track', 'Subscribe', {
