--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,42 +1,50 @@
-- content_for :breadcrumbs do
-  .current= link_to "Account", :user
+- title 'Your account'
+- noindex true
 
-%header.header.-modal
-  %h1.heading Your account
+.wrapper.-small{role: 'layout'}
+  %header.block.-mt4.-mb2
+    %h2.h.-h2.-centered Manage account
 
-.box.-tight
-  %header.-box.-tight
-    %h2.heading Details
-  %div
-    %ul.list.-meta
-      %li
-        %label Name
-        #{ current_user.full_name.present? ? current_user.full_name : "[blank]" }
-      %li
-        %label Email
-        #{ current_user.email_address.present? ? current_user.email_address : "[blank]" }
-      %li
-        %label Nickname for comments
-        #{ current_user.nickname.present? ? current_user.nickname : "[blank]" }
+  .block.-mt4
+    %h2.h.-h4.-centered Account details
 
-- if current_user.subscription
-  - cache ['user/show', current_user, 'subscription', current_user.subscription] do
-    .box
-      %header.-box
-        %h3.heading Subscription
-      %div
-        %p
-          - if current_user.subscription.plan.is_friend?
-            #{ 'Friend' }:
-          - elsif current_user.subscription.plan.is_patron?
-            #{ 'Patron' }:
-          - else
-            #{ current_user.subscription.plan.product.name }:
+  .block.-b.-p1.-my2
+    .p.-t4
+      %ul.list
+        %li.block.-mb1
+          %label.c.-w8 Name
+          %p #{ current_user.full_name.present? ? current_user.full_name : "[blank]" }
+        %li.block.-mb1
+          %label.c.-w8 Email
+          %p #{ current_user.email_address.present? ? current_user.email_address : "[blank]" }
+        %li.block
+          %label.c.-w8 Nickname for comments
+          %p #{ current_user.nickname.present? ? current_user.nickname : "[blank]" }
 
-          %code #{ number_to_currency((current_user.subscription.plan.amount/100.0), unit: '€') }/#{ current_user.subscription.plan.interval }
+  - if current_user.subscription
+    - cache ['user/show', current_user, 'subscription', current_user.subscription] do
+      .block.-mt4
+        %h2.h.-h4.-centered Subscription details
 
-        - if current_user.subscription.current_period_ends_at.present?
-          %p Next billing date is <code>#{ current_user.subscription.current_period_ends_at.strftime('%-d %B') }</code>.
+      .block.-b.-p1.-my2
+        .p.-t4
+          %ul.list
+            %li.block.-mb1
+              %label.c.-w8 Subscription plan
+              %p
+                - if current_user.subscription.plan.is_friend?
+                  #{ 'Friend' }:
+                - elsif current_user.subscription.plan.is_patron?
+                  #{ 'Patron' }:
+                - else
+                  #{ current_user.subscription.plan.product.name }:
+
+                %code #{ number_to_currency((current_user.subscription.plan.amount/100.0), unit: '€') }/#{ current_user.subscription.plan.interval }
+
+            %li.block.-mb1
+              %label.c.-w8 Next billing date
+              - if current_user.subscription.current_period_ends_at.present?
+                %p <code>#{ current_user.subscription.current_period_ends_at.strftime('%-d %B') }</code>
 
 - if current_user.requires_address?
   .box
@@ -68,16 +76,15 @@
         - @invoices.each do |invoice|
           %li= link_to invoice.display_name, invoice, target: "_blank"
 
-.box.-other
-  %header.-box
-    .heading Account options
-  .content
-    %ul.list.-options
-      %li= link_to "Change account details", [:edit, :user], class: 'button -standard'
+.block.-my4.-py4
+  .p.-t4.-sf.-centered
+    %h3.c.-w8 Account options
+    %ul
+      %li= link_to "Change account details", [:edit, :user]
       - if current_user.subscription && current_user.subscriber?
-        %li= link_to "Change payment method", [:payment, :user], class: 'button -standard'
+        %li= link_to "Change payment method", [:payment, :user]
         - if current_user.subscription.changeable?
-          %li= link_to "Change subscription plan", [:subscription, :user], class: 'button -standard'
+          %li= link_to "Change subscription plan", [:subscription, :user]
         - if current_user.subscription.requires_address?
-          %li= link_to "Change subscription address", [:address, :user], class: 'button -standard'
-      %li= link_to "Log out", :user_session, class: 'button -standard', method: :delete
+          %li= link_to "Change subscription address", [:address, :user]
+      %li= link_to "Log out", :user_session, method: :delete
