--- a/app/views/layouts/_primary-footer.html.haml
+++ b/app/views/layouts/_primary-footer.html.haml
@@ -15,7 +15,7 @@
           %section.section.-small
             %p
               %big Managing editor
-              = link_to "Lois Kaplia", "/contributors/lois-kapila"
+              = link_to "Lois Kapila", "/contributors/lois-kapila"
             %p
               %big Deputy editor
               = link_to "Sam Tranum", "/contributors/sam-tranum"
